adding aria-live session

--- a/YoutudeSearchAriaLive/index.html
+++ b/YoutudeSearchAriaLive/index.html
@@ -20,7 +20,7 @@
           </form>
           
           <h2>Results</h2>
-          <div class="js-search-results">
+          <div class="js-search-results" aria-live="assertive" hidden>
             
           </div>
       </main>
